@@ -106,14 +106,6 @@ AC_ARG_ENABLE(everything,
   fi])
 
 echo
-if test x$support_inheritpixmap = xyes; then
-    support_inheritpixmap=no
-    echo "******* transparency support disabled, does not work"
-fi
-if test x$support_xpm = xyes; then
-    support_xpm=no
-    echo "******* pixmap support disabled, does not work"
-fi
 if test x$support_menubar = xyes; then
     support_menubar=no
     echo "******* menubar support disabled, does not work"
