@@ -245,7 +245,8 @@ rxvt_term::resize_pixmap ()
  * Calculate tiling sizes and increments
  * At start, p == 0, incr == xpmwidthheight
  */
-void
+/* INTPROTO */
+static void
 rxvt_pixmap_incr(unsigned int *wh, unsigned int *xy, float *incr, float *p, unsigned int widthheight, unsigned int xpmwidthheight)
 {
     unsigned int    cwh, cxy;
